--- a/colab_setup.ipynb
+++ b/colab_setup.ipynb
@@ -7,13 +7,19 @@
    "source": [
     "# 🔍 Smart Lens FYP - Colab GPU Setup\n",
     "\n",
-    "Run these cells in order to:\n",
+    "⚠️ **This notebook must be run in Google Colab, NOT in VS Code locally!**\n",
+    "\n",
+    "### How to open this in Colab:\n",
+    "1. Go to [Google Colab](https://colab.research.google.com)\n",
+    "2. Click **File → Open Notebook → GitHub tab**\n",
+    "3. Search for `Alee-Razaa/Smart-Lens-FYP`\n",
+    "4. Open **colab_setup.ipynb**\n",
+    "5. Go to `Runtime` → `Change runtime type` → Select **T4 GPU** → Save\n",
+    "\n",
+    "Then run these cells in order to:\n",
     "1. ✅ Verify GPU is available\n",
     "2. ✅ Clone your GitHub repo\n",
-    "3. ✅ Connect VS Code via SSH tunnel\n",
-    "\n",
-    "**⚠️ IMPORTANT:** Make sure you selected **GPU runtime** before running:\n",
-    "- Go to `Runtime` → `Change runtime type` → Select **T4 GPU** → Save"
+    "3. ✅ Connect VS Code via SSH tunnel"
    ]
   },
   {
@@ -29,14 +35,27 @@
    "execution_count": null,
    "id": "f6b95e1c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'torch'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Check GPU availability\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtorch\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mGPU Available: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtorch.cuda.is_available()\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m torch.cuda.is_available():\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'torch'"
+     ]
+    }
+   ],
    "source": [
-    "# Check GPU availability\n",
+    "# Step 1: Check GPU availability\n",
+    "# This cell only works in Google Colab with GPU runtime enabled\n",
     "import torch\n",
     "print(f\"GPU Available: {torch.cuda.is_available()}\")\n",
     "if torch.cuda.is_available():\n",
     "    print(f\"GPU Name: {torch.cuda.get_device_name(0)}\")\n",
-    "    print(f\"GPU Memory: {torch.cuda.get_device_properties(0).total_mem / 1e9:.1f} GB\")\n",
+    "    print(f\"GPU Memory: {torch.cuda.get_device_properties(0).total_memory / 1e9:.1f} GB\")\n",
     "else:\n",
     "    print(\"⚠️ No GPU detected! Go to Runtime → Change runtime type → Select T4 GPU\")"
    ]
@@ -203,8 +222,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
