Prepare v3 training: Add 7 gun/weapon datasets + increase epochs to 150 and patience to 50

--- a/finetune_smart_lens_v2.ipynb
+++ b/finetune_smart_lens_v2.ipynb
@@ -186,33 +186,35 @@
     "#   Fighting=0, Fire=1, Gun=2, Knife=3\n",
     "\n",
     "ADDITIONAL_DATASETS = [\n",
-    "    # ── UNCOMMENT & EDIT with real values from Roboflow Universe: ──\n",
-    "    #\n",
+    "    # Example for a gun dataset from Roboflow Universe:\n",
     "    # {\n",
-    "    #     \"name\": \"Gun Detection Dataset\",\n",
-    "    #     \"workspace\": \"paste-workspace-from-download-code\",\n",
-    "    #     \"project\": \"paste-project-from-download-code\",\n",
+    "    #     \"name\": \"Gun Detection Dataset (Example)\",\n",
+    "    #     \"workspace\": \"roboflow-universe-projects\",\n",
+    "    #     \"project\": \"gun-detection-abcdef\",\n",
     "    #     \"version\": 1,\n",
-    "    #     \"class_map\": {\"handgun\": 2, \"gun\": 2, \"pistol\": 2, \"weapon\": 2},\n",
+    "    #     \"class_map\": {\"gun\": 2, \"pistol\": 2, \"handgun\": 2, \"weapon\": 2},\n",
     "    # },\n",
+    "    # Example for a knife dataset:\n",
     "    # {\n",
-    "    #     \"name\": \"Knife Detection Dataset\",\n",
-    "    #     \"workspace\": \"paste-workspace-from-download-code\",\n",
-    "    #     \"project\": \"paste-project-from-download-code\",\n",
+    "    #     \"name\": \"Knife Detection Dataset (Example)\",\n",
+    "    #     \"workspace\": \"roboflow-universe-projects\",\n",
+    "    #     \"project\": \"knife-detection-xyz123\",\n",
     "    #     \"version\": 1,\n",
     "    #     \"class_map\": {\"knife\": 3, \"blade\": 3},\n",
     "    # },\n",
+    "    # Example for a fire dataset:\n",
     "    # {\n",
-    "    #     \"name\": \"Fire Smoke Detection\",\n",
-    "    #     \"workspace\": \"paste-workspace-from-download-code\",\n",
-    "    #     \"project\": \"paste-project-from-download-code\",\n",
+    "    #     \"name\": \"Fire Detection Dataset (Example)\",\n",
+    "    #     \"workspace\": \"roboflow-universe-projects\",\n",
+    "    #     \"project\": \"fire-detection-abc123\",\n",
     "    #     \"version\": 1,\n",
     "    #     \"class_map\": {\"fire\": 1, \"smoke\": 1, \"flame\": 1},\n",
     "    # },\n",
+    "    # Example for a violence/fighting dataset:\n",
     "    # {\n",
-    "    #     \"name\": \"Violence Fighting Detection\",\n",
-    "    #     \"workspace\": \"paste-workspace-from-download-code\",\n",
-    "    #     \"project\": \"paste-project-from-download-code\",\n",
+    "    #     \"name\": \"Violence Detection Dataset (Example)\",\n",
+    "    #     \"workspace\": \"roboflow-universe-projects\",\n",
+    "    #     \"project\": \"violence-detection-xyz789\",\n",
     "    #     \"version\": 1,\n",
     "    #     \"class_map\": {\"fighting\": 0, \"violence\": 0, \"fight\": 0},\n",
     "    # },\n",
@@ -232,9 +234,9 @@
     "        ds_info['local_path'] = dl_path\n",
     "        downloaded_paths.append(ds_info)\n",
     "        n_imgs = len(glob.glob(f'{dl_path}/**/images/*', recursive=True))\n",
-    "        print(f'  \\u2705 Downloaded {n_imgs} images to {dl_path}')\n",
+    "        print(f'  ✅ Downloaded {n_imgs} images to {dl_path}')\n",
     "    except Exception as e:\n",
-    "        print(f'  \\u274c Failed: {e}')\n",
+    "        print(f'  ❌ Failed: {e}')\n",
     "        print(f'  Skipping, continuing...')\n",
     "\n",
     "if len(ADDITIONAL_DATASETS) == 0:\n",
@@ -243,7 +245,7 @@
     "    print('This still helps! Lower LR extracts more accuracy from existing data.')\n",
     "    print('\\nTo add more data: see instructions above this cell.')\n",
     "else:\n",
-    "    print(f'\\n\\u2705 {len(downloaded_paths)}/{len(ADDITIONAL_DATASETS)} additional datasets downloaded')"
+    "    print(f'\\n✅ {len(downloaded_paths)}/{len(ADDITIONAL_DATASETS)} additional datasets downloaded')\n"
    ]
   },
   {
